tests/baselines/reference/classWithOverloadImplementationOfWrongName2.errors.txt
==== tests/cases/compiler/classWithOverloadImplementationOfWrongName2.ts (1 errors) ====
    class C {
        foo(): string;
        bar(x): any { }
        ~~~
!!! error TS1043: Function overload name must be 'foo'.
        foo(x): number;
    }